--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -90,7 +90,7 @@ We support these event sources:
 - Digital Ocean
   - [Functions](https://docs.digitalocean.com/products/functions/quickstart/sample-functions/) by using [DigitalOceanHandler](./handlers/digital-ocean).
 - Firebase
-  - [Http Events](https://firebase.google.com/docs/functions/http-events) using ([HttpFirebaseHandler](./handlers/firebase)).
+  - [Http Events](https://firebase.google.com/docs/functions/http-events) using ([HttpFirebaseHandler](./handlers/firebase) and [HttpFirebaseV2Handler](./handlers/firebase)).
 - Google Cloud Functions (GCP)
   - [Http Functions](https://cloud.google.com/functions/docs/console-quickstart) using ([GCPHandler](./handlers/gcp)).
 
