docs(readme): added docs about breaking changes

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -112,6 +112,13 @@ I [created a PR](https://github.com/vendia/serverless-express/pull/483) ~~but un
 So I build my own library based on that library with better APIs so I never have to wait for the maintainer to accept my
 PR just to extend the library's functionality :)
 
+## Breaking Changes
+
+I will not consider updating/breaking compatibility of a NodeJS framework as a significant change,
+because I had a lot of supported frameworks and if I created a major version for each one it would be a mess.
+
+So if you want predictability, fix the version with `~` instead of `^`.
+
 ## Credits
 
 Honestly, I just refactored all the code that the @vendia team and many other contributors wrote, thanks so much to them
