docs(installation): removed support doc for older nodejs versions

--- a/www/docs/main/getting-started/installation.mdx
+++ b/www/docs/main/getting-started/installation.mdx
@@ -5,6 +5,7 @@ description: See more about how to install this library.
 ---
 
 
+
 import TabItem from '@theme/TabItem';
 import Tabs from '@theme/Tabs';
 
@@ -12,7 +13,7 @@ The <a href="https://www.npmjs.com/package/@h4ad/serverless-adapter">Serverless 
 
 ## Requirements
 
-Current versions supported by this library are 12.x, 14.x, 16.x and 18.x.
+Current versions supported by this library are 18.x and 20.x.
 
 ## Installing
 
