docs(readme & intro): fixed typo issue with breaking change and pin

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -114,10 +114,10 @@ PR just to extend the library's functionality :)
 
 ## Breaking Changes
 
-I will not consider updating/breaking compatibility of a NodeJS framework as a significant change,
+I will not consider updating/breaking compatibility of a NodeJS framework as a breaking change,
 because I had a lot of supported frameworks and if I created a major version for each one it would be a mess.
 
-So if you want predictability, fix the version with `~` instead of `^`.
+So if you want predictability, pin the version with `~` instead of `^`.
 
 ## Credits
 
