docs(getting-started): update npm install command

--- a/www/docs/main/getting-started/installation.mdx
+++ b/www/docs/main/getting-started/installation.mdx
@@ -4,8 +4,6 @@ position: 1
 description: See more about how to install this library.
 ---
 
-
-
 import TabItem from '@theme/TabItem';
 import Tabs from '@theme/Tabs';
 
@@ -23,7 +21,7 @@ First, inside your project, run the following command:
 <TabItem value="npm" label="NPM" default>
 
 ```bash
-  npm run i --save @h4ad/serverless-adapter
+  npm i --save @h4ad/serverless-adapter
 ```
 
 </TabItem>
@@ -36,6 +34,3 @@ yarn add @h4ad/serverless-adapter
 
 </TabItem>
 </Tabs>
-
-
-
