feat(fastify-v5): ensure support to fastify v5

--- a/www/docs/main/frameworks/fastify.mdx
+++ b/www/docs/main/frameworks/fastify.mdx
@@ -3,6 +3,8 @@ title: Fastify
 description: See more about how to integrate with Fastify.
 ---
 
+> Supported versions: v4 and v5
+
 First, you need to ensure you have the libs installed, so run this code:
 
 ```bash
