--- a/www/docs/main/frameworks/express.mdx
+++ b/www/docs/main/frameworks/express.mdx
@@ -1,7 +1,9 @@
 ---
-title: Express (v4 and v5)
+title: Express
 description: See more about how to integrate with Express.
 ---
+
+> Supported versions: v4 and v5
 
 First, you need to ensure you have the libs installed, so run this code:
 
