--- a/www/docs/main/adapters/aws/api-gateway-v2.mdx
+++ b/www/docs/main/adapters/aws/api-gateway-v2.mdx
@@ -133,10 +133,10 @@ export const handler = ServerlessAdapter.new(app)
 
 API Gateway V2 currently didn't support chunked transfer, so we throw an exception when you send the `transfer-encoding=chunked`.
 
-But, you can disable the exception by setting the `throwOnChunkedTransfer` to `false` in the [ApiGatewayV2Options](/docs/api/Adapters/AWS/ApiGatewayV2Adapter/ApiGatewayV2Options).
+But, you can disable the exception by setting the `throwOnChunkedTransferEncoding` to `false` in the [ApiGatewayV2Options](/docs/api/Adapters/AWS/ApiGatewayV2Adapter/ApiGatewayV2Options).
 
 ```ts title="index.ts"
-new ApiGatewayV1Adapter({ throwOnChunkedTransfer: false })
+new ApiGatewayV1Adapter({ throwOnChunkedTransferEncoding: false })
 ```
 
 The response body will be buffered without the special characters introduced by the chunked transfer keeping the body complete.
